# kyrexx

./: README.md  package-lock.json  projects.toml
app/: package-lock.json  package.json  pnpm-lock.yaml  wagmi.config.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/create-proposal/: page.tsx
app/app/dashboard/: page.tsx
app/app/feed/: page.tsx
app/app/profile/: page.tsx
app/app/scanning-page/: page.tsx
app/components/: QRscanner.tsx  bottom-nav.tsx  text-field.tsx
app/hooks/: useAppeal.ts
app/lib/: wagmi.ts
app/lib/functions/: functions.ts
app/localisation/ben/: default.json
app/localisation/en/: default.json
app/localisation/hin/: default.json
app/providers/: wagmi-provider.tsx
app/utils/: decode.tsx  utils.tsx
backend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  ponder-env.ts  ponder.config.ts  ponder.schema.ts  tsconfig.json
backend/abis/: AppealContract.ts
backend/src/: index.ts
contracts/script/: DeployScript.S.sol
contracts/test/: AppealVote.t.sol
new-app/: env.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
new-app/app/: globals.css  layout.tsx  page.tsx
new-app/components/: LanguageSupporter.tsx  QRscanner.tsx  appeal-card.tsx  bottom-nav.tsx  button.tsx  top-nav.tsx
new-app/hooks/: useAppeal.ts  useTrendingAppeals.ts  useVotes.ts
new-app/lib/: wagmi.ts
new-app/providers/: wagmi-provider.tsx
new-app/utils/: qrValidation.ts
zk/: Cargo.toml
zk/lib/: Cargo.toml
zk/program/: Cargo.toml  aadhar.cer
zk/script/: Cargo.toml
zk/script/src/: main.rs
(+21 files in other folders)
