[package]
name = "aadhar-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aadhaar"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.1"  # For the web server
sp1-sdk = "4.0.0"    # For zk-prover functionality
serde = { version = "1.0.200", features = ["derive"] }  # For serialization/deserialization
serde_json = "1.0"   # For JSON handling
clap = { version = "4.0", features = ["derive", "env"] }  # For command-line argument parsing
tracing = "0.1.40"   # For logging
hex = "0.4.3"        # For hexadecimal encoding/decoding
alloy-sol-types = { workspace = true }  # For Solidity type support
aadhar-lib = { path = "../lib" }  # Your custom library
sp1-verifier = { version = "4.0.0", default-features = false }  # For proof verification
flate2 = "1.0"       # For decompression (used in QR processing)
num-bigint = "0.4"   # For handling large integers (used in QR processing)
actix-rt = "2.0"     # For Actix runtime
sp1-prover = "4.1.1"
actix-cors = "0.6"

[build-dependencies]
sp1-build = "4.0.0"  # For SP1 build-time dependencies
